--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <span>R$ 69,90</span>
             </footer>
         </a>
-        <a href="https://i.ibb.co/V3g6NmF/Ignite-Lab-T-shirt-1.png"><img
-                src="https://i.ibb.co/V3g6NmF/Ignite-Lab-T-shirt-1.png" alt="Ignite-Lab-T-shirt-1">
+        <a href="https://i.ibb.co/V3g6NmF/Ignite-Lab-T-shirt-1.png">
+            <img src="https://i.ibb.co/V3g6NmF/Ignite-Lab-T-shirt-1.png" alt="Ignite-Lab-T-shirt-1">
             <footer>
                 <strong>Camiseta 3</strong>
                 <span>R$ 59,90</span>
